2000-05-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: use vsnprintf only if available.
	* log.cc: move vsnprintf declaration to xstring.h.

2000-05-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* xmalloc.cc, xmalloc.h: add spare parameter to xstrdup.
	* HttpDir.cc: workaround some bugs in apache proxy.
	* GetJob.cc, bookmark.cc, history.cc: use new xstrdup parameter.
	* Http.cc, Http.h, resource.cc: add http:put-content-type setting;
	  fix Http::Send buffer allocation.
	* misc.cc, misc.h: optimize month_names.
	* CmdExec.cc: don't say Running when doing nothing.
	* FileAccess.cc, FileAccess.h: move retries here; don't reset try_time
	  on open; GetTryTime, SetTryTime, GetRetries, SetRetries new/moved here.
	* NetAccess.cc, NetAccess.h: ...from here.
	* FileCopy.cc, FileCopy.h: get/set try_time and retries on store retry.

2000-05-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: (Disconnect) don't set state before check.
	* CmdExec.cc, CmdExec.h: use TERM as closure for cmd:prompt.

2000-05-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: support http:put-method; don't use locale for sending
	  Last-Modified header line; add \n to Last-Modified line;
	  don't use keep-alive for PUT; fix coredump on ^C on PUT.
	* resource.cc: add http:put-method.
	* misc.cc, misc.h: export month_names.

2000-04-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, Http.h: finish keep-alive support.
	* ftpclass.cc: return from GetBetterConnection if a connection breaks.

2000-04-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: add Cookie support; allow disabling user-agent.
	* resource.cc: new setting http:cookie.
	* CatJob.cc: simplify FileCopyPeerFA creation.
	* FileAccess.cc, FileAccess.h, url.cc, url.h, Http.cc,
	  FileCopy.cc, FileCopy.h: use original URL when sending HTTP request,
	  this allows requesting URLs containing e.g. '?'.

2000-04-26  Alexander V. Lukyanov  <lav@yars.free.net>
